# dto/CreateUserDto.js
@@ -1,0 +1,9 @@
+class CreateUserDto {
+    constructor(data) {
+        this.email = data.email
+        this.password = data.password
+        this.roleId = +data.roleId
+    }
+}
+
+module.exports = CreateUserDto
